# python-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  Makefile  README.md  pyproject.toml  requirements-poetry.txt
python_template/: paths.py
tests/: test_hello_world.py
