[project]
authors = [{ name = "Clément Jumel", email = "clement.jumel@gmail.com" }]
dependencies = ["python-dotenv (>=1.0.1,<2.0.0)"]
description = "A Generic Template for Python Packages"
name = "python-template"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool]

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
  "pass",
  "pragma: no cover",
  "raise NotImplementedError",
  "raise TypeError",
  "raise ValueError",
]

[tool.mypy]
strict = true

[tool.poetry.group.test.dependencies]
mypy = "^1.14.1"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov-report term-missing:skip-covered"
markers = ["serial", "slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
extend-ignore = [
  "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "S", # flake8-bandit
]
